--- a/css/layout/_header.css
+++ b/css/layout/_header.css
@@ -21,7 +21,7 @@
 }
 
 .header__hero {
-  width: 25rem;
+  width: 20rem;
   height: 30rem;
 }
 
