--- a/css/layout/_premium.css
+++ b/css/layout/_premium.css
@@ -1,5 +1,4 @@
 .premium__section {
-  width: 100%;
   height: 60rem;
   display: flex;
   justify-content: space-between;
@@ -11,14 +10,16 @@
   background-size: 50%;
   background-repeat: no-repeat;
   position: relative;
+  margin: 0 16.5rem;
 }
 
 .premium__image {
   width: 312px;
   height: 642px;
+  margin-left: 10rem;
   position: absolute;
   top: -35%;
-  left: 194px;
+  left: 0;
 }
 
 .premium__img {
